--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media print {
+  html, body {
+    height: 100vh;
+    margin: 0 !important;
+    padding: 1rem !important;
+    overflow: hidden;
+  }
+}
